--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server ./ -p 8080 -o /app"
+    "start": "http-server ./ -p 8080"
   },
   "repository": {
     "type": "git",
